--- a/app/src/main/res/layout/run.xml
+++ b/app/src/main/res/layout/run.xml
@@ -253,6 +253,50 @@
 
             </RelativeLayout>
 
+            <RelativeLayout
+                android:id="@+id/historyLayout"
+                android:background="@color/white"
+                android:layout_width="221dp"
+                android:layout_height="220dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginBottom="152dp">
+
+
+                <TextView
+                    android:id="@+id/historyTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="76dp"
+                    android:layout_marginTop="5dp"
+                    android:text="Historical data:" />
+
+
+
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/pmChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="190dp"
+                    android:layout_marginTop="25dp"
+                    />
+
+
+
+            </RelativeLayout>
+
+            <ImageButton
+                android:id="@+id/imageBefore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="91dp"
+                app:srcCompat="@drawable/ic_before" />
+
 
         </RelativeLayout>
 
